W trakcie dodawania Produktow.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,23 +7,23 @@
     <title>Spring MVC</title>
 </head>
 <body>
-    <H1>
-        Welcome in Spring MVC App.
-    </H1>
-    <div th:if="${visitor != null}">
+<H1>
+    Welcome in Spring MVC App!
+</H1>
+<div th:if="${visitor != null}">
 
-        <H2 th:text="'Welcome: ' + ${visitor} + '!'"></H2>
-    </div>
-    <h2><a th:href="${'/customer/list'}">Customer list</a></h2>
-    <h4>
-        <p>
-                <span sec:authorize="isAuthenticated()" style="display: inline-block;">
-                    | Logged user: <span sec:authentication="name"></span> |
-                    Roles: <span sec:authentication="principal.authorities"></span> |
-                    <a th:href="@{/logout}">Sign Out</a>
-                </span>
-        </p>
-    </h4>
-
+    <H2 th:text="'Welcome: ' + ${visitor} + '!'"></H2>
+</div>
+<h2><a th:href="${'/customer/list'}">Customer list</a></h2>
+<h2><a th:href="${'/product/list'}">Products list</a></h2>
+<!--<h4>-->
+    <!--<p>-->
+                <!--<span sec:authorize="isAuthenticated()" style="display: inline-block;">-->
+                    <!--| Logged user: <span sec:authentication="name"></span> |-->
+                    <!--Roles: <span sec:authentication="principal.authorities"></span> |-->
+                    <!--<a th:href="@{/logout}">Sign Out</a>-->
+                <!--</span>-->
+    <!--</p>-->
+<!--</h4>-->
 </body>
 </html>
